--- a/TestData.properties
+++ b/TestData.properties
@@ -1,2 +1,2 @@
-# Network-Testing
-# Network-Testing
+#Test Data for Network Testing
+Peer = peer1.org1,peer1.org2,peer0.org1,peer2.org2"# Network-Testing" 
